<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="pref_key_username"
        android:summary="@string/pref_summary_username"
        android:title="@string/pref_title_username"
        android:defaultValue="c606a925-d29e-4a50-8f86-b746a5498a34-bluemix" />
    <EditTextPreference
        android:key="pref_key_dbname"
        android:summary="@string/pref_summary_dbname"
        android:title="@string/pref_title_dbname"
        android:defaultValue="sample_nosql_db"  />
    <EditTextPreference
        android:key="pref_key_api_key"
        android:summary="@string/pref_summary_api_key"
        android:title="@string/pref_title_api_key"
        android:defaultValue="c606a925-d29e-4a50-8f86-b746a5498a34-bluemix" />
    <EditTextPreference
        android:key="pref_key_api_password"
        android:summary="@string/pref_summary_api_password"
        android:title="@string/pref_title_api_password"
        android:defaultValue="ea42c4e684fb2a651f5461352c7b8d69fbbf699e4f0b85559d83e1859423f92d" />

</PreferenceScreen>